# gst_tutorials

./: README.md  main.cpp  meson.build
basic_tutorials/: tutorial-1  tutorial-1.c  tutorial-2  tutorial-2.c  tutorial-3.c  tutorial-4.c  tutorial-5.c
kodlar burada/: bus.cpp  play_video_and_audio.cpp
